# gpt-pdf-classifier

./: .env copy  .gitignore  README.md  final_labels.csv  generate_labels.ipynb  labels_file1.csv  labels_file2.csv  pyproject.toml
notebooks/: create_final_dataset.ipynb  generate_labels.ipynb
scripts/: get_labels.py  pdf-to-images.py
src/: output_schema.py
